--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wagger",
-  "homepage": "https://github.io/asooge/wagger",
+  "homepage": "https://github.io/asooge/wagger-client.git",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
