update app name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wagger",
+  "name": "wagger-client",
   "homepage": "https://asooge.github.io/wagger-client/",
   "version": "0.1.0",
   "private": true,
